# MACIOS

./: .dockerignore  .env.example  .gitignore  .ruff-after-fix-lines.txt  .ruff-after-fix.txt  .ruff-full.json  .ruff-full.txt  .ruff-lines.txt  Dockerfile  LICENSE  README.md  demo_runbook.md  docker-compose.yml  feishu_test.txt  pyproject.toml  五周项目开发总结.md  简历编辑 - CodeCV简历.md  项目结果展示.md
.claude/: settings.local.json
.github/workflows/: ci.yml
data/: pilot.sqlite3  pilot.sqlite3-shm  pilot.sqlite3-wal
data/offline_demo/: offline_note.txt
docs/: interview_playbook.md
reports/: benchmark_dag.json  benchmark_dag.md
scripts/: apply_obsidian_agent_note_updates.ps1  bench_cache.py  bench_guard.py  bench_rag.py  benchmark.py  benchmark_dag.py  build_eval_dataset.py  demo_live.py  demo_preflight.py  evaluate.py  offline_verify.py  run_api.py
tests/: conftest.py  test_agent_loop_memory.py  test_agents.py  test_api.py  test_architecture.py  test_binding_risk.py  test_cache.py  test_capabilities.py  test_eval.py  test_feishu_approval_notifier.py  test_feishu_client.py  test_feishu_longconn.py  test_feishu_progress_notifier.py  test_feishu_skills.py  test_feishu_webhook.py  test_golden_events.py  test_guard.py  test_interaction.py  test_latency_optimizations.py  test_manual.py  test_memory.py  test_memory_v2.py  test_models.py  test_pilot_api.py  test_pilot_domain.py  test_pilot_event_bus.py  test_pilot_event_store.py  test_pilot_ingress.py  test_pilot_m3.py  test_pilot_m5.py  test_pilot_services.py  test_pilot_skill_registry.py  test_pipeline.py  test_pipeline_fallback.py  test_rag.py  test_real_chain_skills.py  test_reflection.py  test_router.py  test_streaming.py  test_vector_store_windows_policy.py
web/: index.html
(+141 files in other folders)
