[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-hub"
version = "0.1.0"
description = "多Agent协同任务系统 — 面向多用户场景的对话、任务拆解、记忆管理、RAG检索完整链路"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Agent-Hub Team" },
]

dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "anthropic>=0.25,<1",
    "openai>=2.26,<3",
    "tenacity>=8.2,<10",
    "structlog>=24.1,<26",
    "pyyaml>=6.0,<7",
    # ── RAG 核心 ──
    "psycopg[binary]>=3.1,<4",
    "pgvector>=0.3,<1",
    "sentence-transformers>=2.7,<4",
    "rank-bm25>=0.2.2,<1",
    "jieba>=0.42,<1",
    "PyMuPDF>=1.24,<2",
    # ── LangGraph 工作流 ──
    "langgraph>=0.2",
    "langchain-core>=0.3",
    # ── 流式输出 + 缓存 ──
    "redis[hiredis]>=5.0,<7",
    "sse-starlette>=2.0,<3",
    # ── 可观测性 ──
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    # ── 评测 ──
    "ragas>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.9",
    "ruff>=0.4",
]
neo4j = [
    "neo4j>=5.19,<6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]
